k8s/tiendaazure/templates/ingress/api-gateway.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tienda-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - azure.tesisunlloja.site
      secretName: tienda-cert-tls 
  rules:
  - host: azure.tesisunlloja.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 3000
